# serializer version: 1
# name: TestContract.test_should_return_same_hash_in_different_processes[column]
  1166043995912835534
# ---
# name: TestContract.test_should_return_same_hash_in_different_processes[constant]
  161664381415222824
# ---
# name: TestContract.test_should_return_same_hash_in_different_processes[date, column]
  1658093798669947354
# ---
# name: TestContract.test_should_return_same_hash_in_different_processes[date, int]
  2015176867097674126
# ---
